add backend logic

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             <div class="form-group">
                 <label for="type">Type</label>
                 <select id="type" name="type" required>
-                    <option value="AIR">Import FCL</option>
-                    <option value="SEA">Import LCL</option>
-                    <option value="TRUCK">Export</option>
-                    <option value="TRUCK">Domestic</option>
+                    <option value="Import FCL">Import FCL</option>
+                    <option value="Import LCL">Import LCL</option>
+                    <option value="Export">Export</option>
+                    <option value="Domestic">Domestic</option>
                 </select>
             </div>
 
